Fix #438 Update the Packet.toString() to indicate the length of the message data